fixed max pooling for overlapping windows

--- a/nervanagpu/kernels/sass/hpool_max.sass
+++ b/nervanagpu/kernels/sass/hpool_max.sass
@@ -55,6 +55,7 @@
     param_shift_RS  : c[0x0][0x1d0]
     param_magic_RST : c[0x0][0x1d4]
     param_shift_RST : c[0x0][0x1d8]
+    param_overlap   : c[0x0][0x1dc]
 </CONSTANT_MAPPING>
 
 <REGISTER_MAPPING>
@@ -213,6 +214,7 @@ LUT_LOOP:
 
 END_SETUP:
 
+--:-:-:-:1      ISETP.NE.AND P4, PT, RZ, param_overlap, PT;
 --:-:-:-:1      MOV32I max, 0xff7fffff; // -FLT_MAX
 --:-:-:-:1      MOV maxIdx, RZ;
 --:-:-:-:1      MOV lutOffset, RZ;
@@ -283,12 +285,33 @@ LOOP:
 
 --:-:1:-:1 @!P5 F2F.F16.F32 max, max;
 
-// bprop
---:-:-:-:6  @P5 IADD   Back0.CC, Back0, maxIdx;
---:-:-:-:2  @P5 IADD.X Back1,    Back1, RZ;
-10:-:-:-:1  @P5 STG.E.CG.S16 [Back0], bprop;
+// P0 = Back0 & 2
+--:-:-:-:1      LOP.AND.NZ P0, RZ, Back0, 0x2;
 
 // fprop
-01:-:-:-:1 @!P5 STG.E.CG.S16 [Out], max;
+--:-:-:-:5  @P5 BRA.U BPROP;
+
+01:-:-:-:1      STG.E.CG.S16 [Out], max;
+--:-:-:-:5      BRA.U EXIT;
+
+BPROP:
+
+// bprop
+--:-:-:-:6      IADD   Back0.CC, Back0, maxIdx;
+--:-:-:-:0      IADD.X Back1,    Back1, RZ;
+
+--:-:-:-:5  @P4 BRA.U OVERLAP;
+
+--:-:-:-:1      STG.E.CG.S16 [Back0], bprop;
+--:-:-:-:5      BRA.U EXIT;
+
+OVERLAP:
+
+--:-:-:-:1  @P0 SHL bprop, bprop, 16;
+--:-:-:-:2  @P0 LOP32I.AND Back0, Back0, 0xfffffffc;
+
+--:-:-:-:1      RED.E.ADD.F16x2.FTZ.RN [Back0], bprop;
+
+EXIT:
 
 --:-:-:-:5      EXIT;
